# DDP-TicTacToe

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.c  run.bat  run.sh
.github/workflows/: build.yml
include/: audio.h  bot.h  core.h  ui.h  utils.h
src/: audio.c  bot.c  core.c  main.c  ui.c  utils.c
